# Nmap Changelog ($Id$); -*-text-*-

[NOT YET RELEASED]

o Nmap now honors routing table entries that override interface
  addresses and netmasks. For example, with this configuration:

  ************************INTERFACES************************
  DEV  (SHORT) IP/MASK         TYPE     UP MAC
  eth0 (eth0)  192.168.0.21/24 ethernet up 00:00:00:00:00:00
  
  **************************ROUTES**************************
  DST/MASK       DEV  GATEWAY
  192.168.0.3/32 eth0 192.168.0.1
  192.168.0.0/24 eth0

  Nmap will not consider 192.168.0.3 directly connected through eth0,
  even though it matches the interface's netmask. It won't try to ARP
  ping 192.168.0.3, but will route traffic through 192.168.0.1.

o Fixed the display of route netmask bits in --iflist on little-endian
  architectures. Formerly, any mask less than /24 was shown as /0, and
  other masks were also wrong. [David]

o Fixed an assertion failure:
    nsock_core.c:199: socket_count_write_dec: Assertion `(iod->writesd_count)
> 0' failed.
  that could occur when connecting to an SSL server with Nsock. This
  was observed when running the http-enum script but could possibly
  have happened in other situations. Thanks to Brandon for reporting
  the bug and testing. [David]

o Added the function bignum_add to the nse_openssl library to support BIGNUM
  addition [Patrik]

o [NSE] Added checks for missing OpenSSL to MySQL scripts and library [Patrik]

o Made --resume work with recent changes to normal output. [jlanthea]

o [NSE] Added the new snmp-interfaces script by Thomas Buchanan, which
  enumerates network interfaces over SNMP.

o [NSE] Added a new library for PostgreSQL and the script pgsql-brute that uses
  it to guess credentials. [Patrik]

o [NSE] Added the script ldap-search which queries a LDAP directory for either
  all, or a number of pre-defined object types. [Patrik]

o The redistributable Visual C++ runtime components installer